fix spacing, etc

--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -373,6 +373,8 @@ hr {
   font-size: 35px;
 }
 
+
+
 .net {
   background: image_url('code.jpeg') center;
   box-shadow: 0px 3px 8px #2a2a2a;
@@ -386,7 +388,7 @@ hr {
 }
 
 .net .frosty {
-  background: rgba(0, 0, 0, 0.74);
+  background: rgba(0, 0, 0, 0.84);
 }
 
 .blue {
@@ -401,10 +403,8 @@ hr {
   padding: 10px;
 }
 
-.clearfix::after {
-  content: "";
-  clear: both;
-  display: table;
+.slide {
+  margin-left: 20px;
 }
 
 @charset "UTF-8";
@@ -489,6 +489,8 @@ hr {
   -webkit-transform-origin: center bottom;
   transform-origin: center bottom;
 }
+
+
 
 @-webkit-keyframes flash {
   from,
